--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,5 +10,16 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+	<!-- <script type="text/javascript" src="http://localhost:4200/src/public/js/setup.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/toolbar.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/brush.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/line.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/circle.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/rectange.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/eraser.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/bin.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/save.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/side-toolbar.js"></script> -->
 </body>
 </html>
