Now loading the scripts for the canvas drawing app after page load.

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
 <body>
   <app-root>Loading...</app-root>
 
-	<script type="text/javascript" src="/js/setup.js"></script>
-	<script type="text/javascript" src="/js/toolbar.js"></script>
-	<script type="text/javascript" src="/js/brush.js"></script>
-	<script type="text/javascript" src="/js/line.js"></script>
-	<script type="text/javascript" src="/js/circle.js"></script>
-	<script type="text/javascript" src="/js/rectange.js"></script>
-	<script type="text/javascript" src="/js/eraser.js"></script>
-	<script type="text/javascript" src="/js/bin.js"></script>
-	<script type="text/javascript" src="/js/save.js"></script>
-	<script type="text/javascript" src="/js/side-toolbar.js"></script>
+	<!-- <script type="text/javascript" src="http://localhost:4200/src/public/js/setup.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/toolbar.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/brush.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/line.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/circle.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/rectange.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/eraser.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/bin.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/save.js"></script>
+	<script type="text/javascript" src="http://localhost:4200/src/public/js/side-toolbar.js"></script> -->
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
